<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".ConfirmData">

    <TextView
        android:id="@+id/tv_indication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/confirmation_title"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/confirmation_name"
        android:textSize="15sp"
        android:gravity="start"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/tv_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/confirmation_date"
        android:textSize="15sp"
        android:gravity="start"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/tv_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/confirmation_telephone"
        android:textSize="15sp"
        android:gravity="start"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/confirmation_email"
        android:textSize="15sp"
        android:gravity="start"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/confirmation_description"
        android:textSize="15sp"
        android:gravity="start"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/tv_descrip_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/confirmation_descrip_text"
        android:textSize="15sp"
        android:gravity="start"
        android:minLines="2"
        android:maxLines="5"
        android:textColor="?android:attr/textColorPrimary" />

    <Button
        android:id="@+id/btnEditData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_bt" />

</LinearLayout>