<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/tv_indication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/form_title"
                android:textColor="?android:attr/textColorPrimary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_et_nombre"
                    android:inputType="text"
                    android:ems="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_date_indication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/form_indication"
                android:textColor="?android:attr/textColorPrimary"  />

            <DatePicker
                android:id="@+id/dp_date"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                android:theme="@android:style/Theme.Holo.Light.Dialog"
                android:calendarTextColor="?android:attr/textColorPrimary" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_et_telefono"
                    android:inputType="phone"
                    android:ems="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_et_email"
                    android:inputType="textEmailAddress"
                    android:ems="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:minLines="2"
                    android:maxLines="5"
                    android:hint="@string/form_et_descripcion" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCheckData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_bt" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>
